<resources>
    <string name="app_name" translatable="false">RecipeApp</string>
    <string name="title_category">Category</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_image_category" translatable="false">Title image category</string>
    <string name="category_image" translatable="false">Category image</string>
    <string name="recipes_list" translatable="false">Recipes list</string>
    <string name="recipe_image" translatable="false">Recipe image</string>
    <string name="title_recipe">Recipe</string>
    <string name="recipes_title_image" translatable="false">Recipes title image</string>
    <string name="method_example" translatable="false">В глубокой миске смешайте говяжий фарш, лук, чеснок, соль и перец. Разделите фарш на 4 равные части и сформируйте котлеты.</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="recipe_portions">Portions:</string>
    <string name="cooking_method">Cooking method</string>
    <string name="portion_quantity" translatable="false">1</string>
    <string name="button_to_add_in_favorites" translatable="false">Button to add in favorites</string>
    <string name="seek_bar_to_adjust_portions_quantity" translatable="false">Seek bar to adjust portions quantity</string>
    <string name="recipe_title_image" translatable="false">Recipe title image</string>
    <string name="title_favorites">Favorites</string>
    <string name="no_favorites_added">You have not added any recipes to your favorites yet</string>
    <string name="title_image_favorites" translatable="false">Title image favorites</string>
    <string name="remove_from_favorites_btn">Button to remove from favorites</string>
    <string name="add_in_favorites_btn">Button to add in favorites</string>
</resources>